# PyClaw

./: .env.example  .gitignore  AGENTS.md  AGENT_MEMORY.md  DEAD_CODE.md  README.md  demo_elite_env_compat.py  demo_feature_matrix.py  demo_live_loop.py  demo_memory_live.py  demo_spec_proof.py  demo_subagents_live.py  pyproject.toml
.agent/: mcp-servers.yaml
.agent/hooks/: default_hooks.yaml  example_pretooluse.yaml
agents/db-agent/: SOUL.md  TOOLS.md
agents/pdpa-agent/: SOUL.md  TOOLS.md
agents/rag-agent/: SOUL.md  TOOLS.md
docs/: agent_eval_problems.md  agent_report.md  agentskills_critique_review.md  hole2_grounding_design_memo.md  hole3_inloop_retry_design_memo.md  hooks_vs_prompt_tao.md  pdpa_agent_report.md
docs/demos/: README.md
pyclaw/: __init__.py  cli.py  config.py
pyclaw_hooks/: __init__.py  format.py  grounding.py  guards.py
pyclaw_hooks_pdpa/: __init__.py  grounding.py
tests/: test_agent_loop.py  test_block_detail_observability.py  test_cli.py  test_config_env.py  test_grounding_hook.py  test_grounding_trace_benchmark.py  test_hole2_orchestrator_grounding.py  test_hook_engine.py  test_inloop_retry.py  test_llm_stream.py  test_mcp.py  test_mcp_bridge.py  test_mcp_sse_transport.py  test_memory.py  test_orchestrator_block_breaker.py  test_orchestrator_cli.py  test_orchestrator_registry.py  test_orchestrator_runner.py  test_plugin_hook_loading.py  test_plugins.py  test_session.py  test_shipped_hooks.py  test_skills.py  test_subagent_tool.py  test_subagents.py
to-do/: marketplace_skill_design.md
tools/: render_terminal.py
(+54 files in other folders)
